@@ -1,5 +1,5 @@
 
 let version = "@VERSION@";;
-let documentation_root = "@DOCROOT@";;
+let documentation_root = "@DOCDIR@/doc/batteries";;
 let (browser: (_, _, _) format) = "@BROWSER_COMMAND@";;
 
