@@ -1,6 +1,10 @@
 2008-11-10  David Teller  <David.Teller@univ-orleans.fr>
 
+	* config.ml.in: [documentation_root] now built from [@DOCDIR@]
+
 	* configure.ac: [OCAMLPKG_camomile] now substituted
+
+	* configure.ac: [INSTALLATION] added
 
 	* README: added [opt] and [instdoc]
 
